--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image: ^4.3.0
   path_provider: ^2.1.5
   uuid: ^4.5.1
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
