--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   uuid: ^4.5.1
   qr_code_scanner: ^1.0.1
+  mobile_scanner: ^6.0.6
 
 dev_dependencies:
   flutter_test:
